--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 		<meta name="keywords" content="стоматолог, пародонтолог, лечение десен, имплантация, зубы, Москва">
 		<link rel="manifest" href="./files/manifest.json">
 		<title>Наам Константин Владимирович | Стоматолог-пародонтолог</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757170765035"></script>
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757243115299"></script>
 		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="modulepreload" crossorigin="" href="./js/popup.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/popup.min.css?v=1757170765035">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757170765035">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757243115299">
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757243115299">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -119,7 +118,7 @@
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-1-450.webp" type="image/webp">
 								<source media="(max-width: 600px)" srcset="./assets/img/main/Photo-naam-1-600.webp" type="image/webp">
 								<source media="(max-width: 1200px)" srcset="./assets/img/main/Photo-naam-1-1200.webp" type="image/webp">
-								<img width="200" alt="Наам К.В." src="./assets/img/main/Photo-naam-1.webp">
+								<img width="200" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-1.webp">
 							</picture>
 						</div>
 						<div class="item__logo">
@@ -127,7 +126,7 @@
 								<source media="(max-width: 450px)" srcset="./assets/img/main/logo-450.webp" type="image/webp">
 								<source media="(max-width: 600px)" srcset="./assets/img/main/logo-600.webp" type="image/webp">
 								<source media="(max-width: 1200px)" srcset="./assets/img/main/logo-1200.webp" type="image/webp">
-								<img width="300" alt="Логотип Наам К.В." src="./assets/img/main/logo.webp">
+								<img width="300" alt="Логотип Наам К.В." loading="lazy" src="./assets/img/main/logo.webp">
 							</picture>
 						</div>
 						<div class="item__tagline"></div>
@@ -182,7 +181,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/dip-450.webp" type="image/webp">
-								<img width="70" alt="Диплом об окончании Пермской государственной медицинской академи" src="./assets/img/main/dip.webp">
+								<img width="70" alt="Диплом об окончании Пермской государственной медицинской академи" loading="lazy" src="./assets/img/main/dip.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -212,7 +211,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-2-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." src="./assets/img/main/Photo-naam-2.webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-2.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -238,7 +237,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/love_tuymen-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." src="./assets/img/main/love_tuymen.webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/love_tuymen.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -258,7 +257,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-3-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." src="./assets/img/main/Photo-naam-3.webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-3.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -280,7 +279,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-4-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." src="./assets/img/main/Photo-naam-4.webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-4.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -303,7 +302,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-5-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." src="./assets/img/main/Photo-naam-5.webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-5.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -324,7 +323,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-6-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." src="./assets/img/main/Photo-naam-6.webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-6.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -422,42 +421,6 @@
 							</a>
 						</li>
 					</ul>
-				</div>
-			</div>
-		</div>
-		<div data-fls-popup="popup_blog" aria-hidden="true" class="popup">
-			<div data-fls-popup-wrapper="" class="popup__wrapper">
-				<div data-fls-popup-body="" class="popup__body">
-					<button data-fls-popup-close="" type="button" class="popup__close">
-						<svg width="23" height="23" viewbox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path opacity="0.850056" d="M1.73333 1.48883L21.5469 21.0288" stroke="#979797" stroke-linecap="square"></path>
-							<path opacity="0.850056" d="M21.2667 1.48883L1.45309 21.0288" stroke="#979797" stroke-linecap="square"></path>
-						</svg>
-					</button>
-					<div data-fls-popup-content="" class="popup__text">
-						<!-- УБРАТЬ <li> и оставить только внутреннюю структуру -->
-						<div class="post__img">
-							<div data-fls-beforeafter="" class="before-after">
-								<div data-fls-beforeafter-before="" class="before-after__item">
-									<img src="" alt="" loading="lazy">
-								</div>
-								<div data-fls-beforeafter-after="" class="before-after__item">
-									<img src="" alt="" loading="lazy">
-								</div>
-								<div data-fls-beforeafter-arrow="" class="before-after__arrow">
-									<div class="before-after__arrows">
-										<svg class="before-after__centr" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewbox="0 0 100 100">
-											<polygon points="0 50 37 68 37 32 0 50" style="fill:#535353"></polygon>
-											<polygon points="100 50 64 32 64 68 100 50" style="fill:#535353"></polygon>
-										</svg>
-									</div>
-								</div>
-							</div>
-						</div>
-						<h2 class="post__title"></h2>
-						<div class="post__content"></div>
-						<!-- КОНЕЦ (без </li>) -->
-					</div>
 				</div>
 			</div>
 		</div>
