--- a/blog.html
+++ b/blog.html
@@ -30,11 +30,10 @@
 		<meta name="keywords" content="стоматолог, пародонтолог, лечение десен, имплантация, зубы, Москва">
 		<link rel="manifest" href="./files/manifest.json">
 		<title>Наам Константин Владимирович | Стоматолог-пародонтолог</title>
-		<script type="module" crossorigin="" src="./js/blog.min.js?v=1757170765035"></script>
+		<script type="module" crossorigin="" src="./js/blog.min.js?v=1757243115300"></script>
 		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="modulepreload" crossorigin="" href="./js/popup.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/popup.min.css?v=1757170765035">
-		<link rel="stylesheet" crossorigin="" href="./css/blog.min.css?v=1757170765035">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757243115300">
+		<link rel="stylesheet" crossorigin="" href="./css/blog.min.css?v=1757243115300">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -113,7 +112,7 @@
 			</header>
 			<main class="page page--blog">
 				<div class="page__container blog">
-					<h1 class="blog__headline">Клинические случаи 🦷</h1>
+					<h1 class="blog__headline">🦷 Клинические случаи</h1>
 					<ul class="blog__posts">
 						<!-- СЛУЧАЙ 1: Эпулис -->
 						<li class="blog__post post" data-category="Эпулис">
@@ -147,15 +146,19 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="post__title">Когда десна говорит: «Обрати на меня внимание» 👁️</h2>
+							<h2 class="post__title">
+								👁️ Когда десна говорит:
+								<br>
+								«Обрати на меня внимание»
+							</h2>
 							<div class="post__content">
 								<p>
 									<em>Клинический случай удаления эпулиса у молодой пациентки</em>
 								</p>
 								<p>
 									В ноябре 2022 года в стоматологическую клинику обратилась 25-летняя девушка. Её беспокоило, что
-						между зубами на верхней челюсти слева появился участок десны необычной формы — увеличился
-						межзубной сосочек. Боли не было, но вид вызывал тревогу.
+						между зубами на верхной челюсти слева появился участок десны необычной формы — увеличился
+						межзубной сосочек. Боли не было, но вид вызывала тревогу.
 								</p>
 								<p>
 									Пациентка рассказала, что впервые заметила это образование около года назад, но тогда оно было
@@ -242,15 +245,15 @@
 								<p>
 									Иногда даже безболезненные изменения в десне — это повод обратиться к стоматологу. Чем раньше
 						выявить проблему, тем проще и безопаснее будет лечение. В данном случае всё обошлось без
-						осложнений — благодаря внимательности пациентки и чёткому взаимодействию с врачом.
+						осложнений — благодаря внимательности пациентки и чёткому взаимодействию с врачем.
 								</p>
 								<p>
 									Лечение таких образований — это всегда совместная работа врача и пациента. Главное — не
 						откладывать визит и доверять специалисту.
 								</p>
 							</div>
-							<div class="menu__item">
-								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="menu__link">Подробнее 📖</a>
+							<div class="post__button">
+								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="post__link">📖 Подробнее</a>
 							</div>
 						</li>
 						<!-- СЛУЧАЙ 2: Гингивит -->
@@ -285,7 +288,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="post__title">Гингивит 🩸</h2>
+							<h2 class="post__title">🩸 Гингивит</h2>
 							<div class="post__content">
 								<p>
 									<strong>"Доктор, у меня дёсны кровят… особенно когда ем яблоко. Или просто живу."</strong>
@@ -302,7 +305,7 @@
 									.
 								</p>
 								<h3>⚕️ Лечение</h3>
-								<p>Назначили комплексную терапию:</p>
+								<p>Назначили комплексную терапия:</p>
 								<ul>
 									<li>
 										Профессиональная гигиена: удаление над- и поддесневых отложений ультразвуком и Air-Flow.
@@ -336,8 +339,8 @@
 									Гингивит — не приговор. Это призыв к действию. А мы — всегда рядом, чтобы помочь. 🤝
 								</p>
 							</div>
-							<div class="menu__item">
-								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="menu__link">Подробнее 📖</a>
+							<div class="post__button">
+								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="post__link">📖 Подробнее</a>
 							</div>
 						</li>
 						<!-- СЛУЧАЙ 3: Отбеливание -->
@@ -371,67 +374,72 @@
 										</div>
 									</div>
 								</div>
-							</div>
-							<h2 class="post__title">Отбеливание ✨</h2>
-							<div class="post__content">
-								<p>
-									<strong>Когда улыбке хочется отпуск на Мальдивах 🌴</strong>
-								</p>
-								<p>
-									Пациентка обратилась с запросом:
-									<strong>"Хочу посветлее. На фото с подругами мои зубы как будто
-							в тени."</strong>
-									Раньше не отбеливала, но давно мечтала — без фанатизма, просто красиво.
-								</p>
-								<h3>🔧 Подготовка</h3>
-								<p>
-									Первым делом — профгигиена. Удалили налёт, отполировали, напомнили, как правильно чистить.
-						Отбеливать «по верхам» — как макияж на немытой коже.
-								</p>
-								<div class="post__gallery">
-									<picture>
-										<source media="(max-width: 450px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-1-450.webp" type="image/webp">
-										<source media="(max-width: 600px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-1-600.webp" type="image/webp">
-										<source media="(max-width: 1200px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-1-1200.webp" type="image/webp">
-										<source media="(max-width: 1920px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-1-1920.webp" type="image/webp">
-										<img alt="Подготовка к отбеливанию" loading="lazy" src="./assets/img/blog/Bleaching-1/Bleaching-1-1.webp">
-									</picture>
-									<picture>
-										<source media="(max-width: 450px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-2-450.webp" type="image/webp">
-										<source media="(max-width: 600px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-2-600.webp" type="image/webp">
-										<source media="(max-width: 1200px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-2-1200.webp" type="image/webp">
-										<source media="(max-width: 1920px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-2-1920.webp" type="image/webp">
-										<img alt="Процедура отбеливания" loading="lazy" src="./assets/img/blog/Bleaching-1/Bleaching-1-2.webp">
-									</picture>
+								<h2 class="post__title">✨ Отбеливание</h2>
+								<div class="post__content">
+									<p>
+										<strong>🌴 Когда улыбке хочется отпуск на Мальдивах</strong>
+									</p>
+									<p>
+										Пациентка обратилась с запросом:
+										<strong>
+											"Хочу посветлее. На фото с подругами мои зубы как
+								будто
+								в тени."
+										</strong>
+										Раньше не отбеливала, но давно мечтала — без фанатизма, просто
+							красиво.
+									</p>
+									<h3>🔧 Подготовка</h3>
+									<p>
+										Первым делом — профгигиена. Удалили налёт, отполировали, напомнили, как правильно чистить.
+							Отбеливать «по верхам» — как макияж на немытой коже.
+									</p>
+									<div class="post__gallery">
+										<picture>
+											<source media="(max-width: 450px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-1-450.webp" type="image/webp">
+											<source media="(max-width: 600px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-1-600.webp" type="image/webp">
+											<source media="(max-width: 1200px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-1-1200.webp" type="image/webp">
+											<source media="(max-width: 1920px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-1-1920.webp" type="image/webp">
+											<img alt="Подготовка к отбеливанию" loading="lazy" src="./assets/img/blog/Bleaching-1/Bleaching-1-1.webp">
+										</picture>
+										<picture>
+											<source media="(max-width: 450px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-2-450.webp" type="image/webp">
+											<source media="(max-width: 600px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-2-600.webp" type="image/webp">
+											<source media="(max-width: 1200px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-2-1200.webp" type="image/webp">
+											<source media="(max-width: 1920px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-2-1920.webp" type="image/webp">
+											<img alt="Процедура отбеливания" loading="lazy" src="./assets/img/blog/Bleaching-1/Bleaching-1-2.webp">
+										</picture>
+									</div>
+									<h3>⚡ Процедура</h3>
+									<p>
+										Провели клиническое отбеливание системой
+										<strong>Zoom 4</strong>
+										— с контролем, без
+							перегрева, с
+							заботой.
+									</p>
+									<h3>✅ Результат через 14 дней</h3>
+									<div class="post__gallery">
+										<picture>
+											<source media="(max-width: 450px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-3-450.webp" type="image/webp">
+											<source media="(max-width: 600px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-3-600.webp" type="image/webp">
+											<source media="(max-width: 1200px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-3-1200.webp" type="image/webp">
+											<source media="(max-width: 1920px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-3-1920.webp" type="image/webp">
+											<img alt="Результат отбеливания" loading="lazy" src="./assets/img/blog/Bleaching-1/Bleaching-1-3.webp">
+										</picture>
+									</div>
+									<p>
+										Улыбка посвежела, осветлилась, но осталась естественной. Никакой «белизны унитаза» — только
+							ухоженный, дорогой эффект.
+									</p>
+									<p>
+										Пациентка довольна, зеркала радуются, подруги в восторге. А мы — за то, чтобы красота была с
+							умом. 💫
+									</p>
 								</div>
-								<h3>⚡ Процедура</h3>
-								<p>
-									Провели клиническое отбеливание системой
-									<strong>Zoom 4</strong>
-									— с контролем, без перегрева, с
-						заботой.
-								</p>
-								<h3>✅ Результат через 14 дней</h3>
-								<div class="post__gallery">
-									<picture>
-										<source media="(max-width: 450px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-3-450.webp" type="image/webp">
-										<source media="(max-width: 600px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-3-600.webp" type="image/webp">
-										<source media="(max-width: 1200px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-3-1200.webp" type="image/webp">
-										<source media="(max-width: 1920px)" srcset="./assets/img/blog/Bleaching-1/Bleaching-1-3-1920.webp" type="image/webp">
-										<img alt="Результат отбеливания" loading="lazy" src="./assets/img/blog/Bleaching-1/Bleaching-1-3.webp">
-									</picture>
+								<div class="menu__item">
+									<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="menu__link">📖 Подробнее</a>
 								</div>
-								<p>
-									Улыбка посвежела, осветлилась, но осталась естественной. Никакой «белизны унитаза» — только
-						ухоженный, дорогой эффект.
-								</p>
-								<p>
-									Пациентка довольна, зеркала радуются, подруги в восторге. А мы — за то, чтобы красота была с
-						умом. 💫
-								</p>
-							</div>
-							<div class="menu__item">
-								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="menu__link">Подробнее 📖</a>
 							</div>
 						</li>
 						<li class="blog__post post" data-category="Удаление">
@@ -456,7 +464,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="post__title">Удаление зуба ⚡</h2>
+							<h2 class="post__title">⚡ Удаление зуба</h2>
 							<div class="post__content">
 								<p>
 									<strong>"Доктор, болит зуб... но как-то особенно: будто он вырос и теперь мстит."</strong>
@@ -506,8 +514,8 @@
 								<p>Швы снимаем через 14 дней. Контрольный осмотр — обязательно.</p>
 								<p>Хронический воспалительный процесс ликвидирован. Пациент доволен, боль ушла. ✅</p>
 							</div>
-							<div class="menu__item">
-								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="menu__link">Подробнее 📖</a>
+							<div class="post__button">
+								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="post__link">📖 Подробнее</a>
 							</div>
 						</li>
 						<li class="blog__post post" data-category="Гигиена">
@@ -587,8 +595,8 @@
 								</p>
 								<p>Терпение и труд — всё перетрут. А я помогу. 💪</p>
 							</div>
-							<div class="menu__item">
-								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="menu__link">Подробнее 📖</a>
+							<div class="post__button">
+								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="post__link">📖 Подробнее</a>
 							</div>
 						</li>
 						<li class="blog__post post" data-category="Удаление">
@@ -613,7 +621,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="post__title">Удаление зуба 🦷⚡</h2>
+							<h2 class="post__title">🦷⚡ Удаление зуба</h2>
 							<div class="post__content">
 								<p>
 									<strong>"Доктор, зуб ноет… особенно когда я ем или просто живу"</strong>
@@ -650,8 +658,8 @@
 								<p>Пациент держался молодцом, даже пошутил. 😄</p>
 								<p>Жизнь коротка, а зубы должны быть крепкими. Если болит — не ждите. ⏰</p>
 							</div>
-							<div class="menu__item">
-								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="menu__link">Подробнее 📖</a>
+							<div class="post__button">
+								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="post__link">📖 Подробнее</a>
 							</div>
 						</li>
 						<li class="blog__post post" data-category="Гигиена">
@@ -685,7 +693,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="post__title">Профилактика: магия чистоты 🛡️✨</h2>
+							<h2 class="post__title">🛡️✨ Профилактика: магия чистоты</h2>
 							<div class="post__content">
 								<p>
 									<strong>"Мои феи-ортодонты и магия профилактики"</strong>
@@ -725,8 +733,8 @@
 								</p>
 								<p>Профилактика — это не роскошь. Это забота. 💖</p>
 							</div>
-							<div class="menu__item">
-								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="menu__link">Подробнее 📖</a>
+							<div class="post__button">
+								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="post__link">📖 Подробнее</a>
 							</div>
 						</li>
 						<li class="blog__post post" data-category="Гигиена">
@@ -760,7 +768,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="post__title">Профилактика: феи-ортодонты и забота 🛡️🌟</h2>
+							<h2 class="post__title">🛡️🌟 Профилактика: феи-ортодонты и забота</h2>
 							<div class="post__content">
 								<p>
 									<strong>"Феи-ортодонты и магия чистоты"</strong>
@@ -792,8 +800,8 @@
 								</p>
 								<p>Профилактика — это не просто слово. Это забота. 💖🚀</p>
 							</div>
-							<div class="menu__item">
-								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="menu__link">Подробнее 📖</a>
+							<div class="post__button">
+								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="post__link">📖 Подробнее</a>
 							</div>
 						</li>
 						<li class="blog__post post" data-category="Отбеливание">
@@ -827,7 +835,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="post__title">Отбеливание: улыбка мечты ✨🦷</h2>
+							<h2 class="post__title">✨🦷 Отбеливание: улыбка мечты</h2>
 							<div class="post__content">
 								<p>
 									<strong>"Доктор, хочу, чтобы улыбка светилась!"</strong>
@@ -854,8 +862,8 @@
 								</p>
 								<p>Пациентка в восторге. Подруги — тоже. А мы — за красоту с умом. 😉</p>
 							</div>
-							<div class="menu__item">
-								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="menu__link">Подробнее 📖</a>
+							<div class="post__button">
+								<a href="#" data-fls-popup-link="popup_blog" data-fls-popup-source=".blog__post" class="post__link">📖 Подробнее</a>
 							</div>
 						</li>
 					</ul>
