--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		</style>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="./assets/img/favicon.ico">
+		<link rel="shortcut icon" href="/flsStart4-main2/assets/img/favicon.ico">
 		<meta name="keywords" content="Стоматолог-пародонтолог, лечение десен, пародонтолог Москва, лечение заболеваний десен, лазерная стоматология, пластика мягких тканей, пародонтит лечение, пародонтоз лечение, гингивит лечение, профессиональная чистка зубов, удаление зубного камня, лечение десен лазером, имплантология, пародонтологическое лечение, ведущий пародонтолог, профилактика заболеваний десен, лечение кровоточивости десен, восстановление десен, хирург-пародонтолог, лечение рецессии десен, закрытый кюретаж, открытый кюретаж, гингивопластика, костная пластика, наращивание костной ткани, лечение пародонта, пародонтолог высшей категории, лечение десен цена, лазерная терапия десен">
 		<meta name="description" content="Наам Константин Владимирович — ведущий специалист по пародонтологии. Проводит современное лечение десен, лазерную терапию и пластику мягких тканей. Все сертификаты и примеры работ доступны на сайте.">
 		<!-- <meta property="og:title" content="Наам Константин Владимирович"> -->
@@ -28,12 +28,12 @@
 		<meta name="twitter:image" content="https://naam-kv.ru/files/og-image.png">
 		<meta name="author" content="Наам Константин Владимирович">
 		<meta name="keywords" content="стоматолог, пародонтолог, лечение десен, имплантация, зубы, Москва">
-		<link rel="manifest" href="./files/manifest.json">
+		<link rel="manifest" href="/flsStart4-main2/files/manifest.json">
 		<title>Наам Константин Владимирович | Стоматолог-пародонтолог</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757243115299"></script>
-		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757243115299">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757243115299">
+		<script type="module" crossorigin="" src="/flsStart4-main2/js/index.min.js?v=1757244319630"></script>
+		<link rel="modulepreload" crossorigin="" href="/flsStart4-main2/js/app.min.js">
+		<link rel="stylesheet" crossorigin="" href="/flsStart4-main2/css/app.min.css?v=1757244319630">
+		<link rel="stylesheet" crossorigin="" href="/flsStart4-main2/css/index.min.css?v=1757244319630">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -42,9 +42,7 @@
 					<!-- <include src="@components/layout/menu/menu.html" locals='{"active":"Home"}'></include> -->
 					<div class="header__logo">
 						<a href="index.html">
-							<picture>
-								<img width="206" alt="Логотип Наам К.В." src="./assets/img/logo.webp">
-							</picture>
+							<img src="/flsStart4-main2/assets/img/logo.png" width="206" alt="Логотип Наам К.В.">
 						</a>
 					</div>
 					<div class="header__menu menu">
@@ -105,7 +103,7 @@
 					</div>
 					<button type="button" class="header__arrow">
 						<a href="#" data-goto="main">
-							<img src="./assets/img/icons/arrow.svg" alt="Image">
+							<img src="/flsStart4-main2/assets/img/icons/arrow.svg" alt="Image">
 						</a>
 					</button>
 				</div>
@@ -114,20 +112,10 @@
 				<div class="page__container">
 					<div class="page__item item__first">
 						<div class="item__photo photo__main">
-							<picture>
-								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-1-450.webp" type="image/webp">
-								<source media="(max-width: 600px)" srcset="./assets/img/main/Photo-naam-1-600.webp" type="image/webp">
-								<source media="(max-width: 1200px)" srcset="./assets/img/main/Photo-naam-1-1200.webp" type="image/webp">
-								<img width="200" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-1.webp">
-							</picture>
+							<img src="/flsStart4-main2/assets/img/main/Photo-naam-1.png" width="200" alt="Наам К.В." loading="lazy">
 						</div>
 						<div class="item__logo">
-							<picture>
-								<source media="(max-width: 450px)" srcset="./assets/img/main/logo-450.webp" type="image/webp">
-								<source media="(max-width: 600px)" srcset="./assets/img/main/logo-600.webp" type="image/webp">
-								<source media="(max-width: 1200px)" srcset="./assets/img/main/logo-1200.webp" type="image/webp">
-								<img width="300" alt="Логотип Наам К.В." loading="lazy" src="./assets/img/main/logo.webp">
-							</picture>
+							<img src="/flsStart4-main2/assets/img/main/logo.png" width="300" alt="Логотип Наам К.В." loading="lazy">
 						</div>
 						<div class="item__tagline"></div>
 						<div class="item__text text__about">
@@ -179,10 +167,7 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<picture>
-								<source media="(max-width: 450px)" srcset="./assets/img/main/dip-450.webp" type="image/webp">
-								<img width="70" alt="Диплом об окончании Пермской государственной медицинской академи" loading="lazy" src="./assets/img/main/dip.webp">
-							</picture>
+							<img src="/flsStart4-main2/assets/img/main/dip.png" width="70" alt="Диплом об окончании Пермской государственной медицинской академи" loading="lazy">
 						</div>
 						<div class="item__text">
 							<p>
@@ -209,10 +194,7 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<picture>
-								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-2-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-2.webp">
-							</picture>
+							<img src="/flsStart4-main2/assets/img/main/Photo-naam-2.jpg" width="70" alt="Наам К.В." loading="lazy">
 						</div>
 						<div class="item__text">
 							<p>
@@ -235,10 +217,7 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<picture>
-								<source media="(max-width: 450px)" srcset="./assets/img/main/love_tuymen-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/love_tuymen.webp">
-							</picture>
+							<img src="/flsStart4-main2/assets/img/main/love_tuymen.jpg" width="70" alt="Наам К.В." loading="lazy">
 						</div>
 						<div class="item__text">
 							<p>
@@ -255,10 +234,7 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<picture>
-								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-3-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-3.webp">
-							</picture>
+							<img src="/flsStart4-main2/assets/img/main/Photo-naam-3.jpg" width="70" alt="Наам К.В." loading="lazy">
 						</div>
 						<div class="item__text">
 							<p>
@@ -277,10 +253,7 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<picture>
-								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-4-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-4.webp">
-							</picture>
+							<img src="/flsStart4-main2/assets/img/main/Photo-naam-4.jpg" width="70" alt="Наам К.В." loading="lazy">
 						</div>
 						<div class="item__text">
 							<p>
@@ -300,10 +273,7 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<picture>
-								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-5-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-5.webp">
-							</picture>
+							<img src="/flsStart4-main2/assets/img/main/Photo-naam-5.jpg" width="70" alt="Наам К.В." loading="lazy">
 						</div>
 						<div class="item__text">
 							<p>
@@ -321,10 +291,7 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<picture>
-								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-6-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-6.webp">
-							</picture>
+							<img src="/flsStart4-main2/assets/img/main/Photo-naam-6.jpg" width="70" alt="Наам К.В." loading="lazy">
 						</div>
 						<div class="item__text">
 							<p>
@@ -350,10 +317,10 @@
 					<div class="footer__contacts">
 						<div class="footer__nomber">
 							<a href="https://t.me/dr_naam" target="_blank">
-								<img src="./assets/img/contacts/telegram.svg" alt="Image">
+								<img src="/flsStart4-main2/assets/img/contacts/telegram.svg" alt="Image">
 							</a>
 							<a href="https://wa.me/79523480141" target="_blank">
-								<img src="./assets/img/contacts/wa.svg" alt="Image">
+								<img src="/flsStart4-main2/assets/img/contacts/wa.svg" alt="Image">
 							</a>
 							<a href="tel:+79523480141" target="_blank">8 (952) 348-01-41</a>
 						</div>
@@ -381,42 +348,42 @@
 						<li class="popup__item">
 							<a href="tel:+79523480141" target="_blank">
 								<p class="popup__title">Телефон</p>
-								<img src="./assets/img/contacts/tel.svg" alt="">
+								<img src="/flsStart4-main2/assets/img/contacts/tel.svg" alt="">
 								<p class="popup__about">+79523480141</p>
 							</a>
 						</li>
 						<li class="popup__item">
 							<a href="https://t.me/dr_naam" target="_blank">
 								<p class="popup__title">Telegram</p>
-								<img src="./assets/img/contacts/telegram.svg" alt="">
+								<img src="/flsStart4-main2/assets/img/contacts/telegram.svg" alt="">
 								<p class="popup__about">dr_naam</p>
 							</a>
 						</li>
 						<li class="popup__item">
 							<a href="mailto:naamkv@yandex.ru" target="_blank">
 								<p class="popup__title">Почта</p>
-								<img src="./assets/img/contacts/mail.svg" alt="">
+								<img src="/flsStart4-main2/assets/img/contacts/mail.svg" alt="">
 								<p class="popup__about">naamkv@yandex.ru</p>
 							</a>
 						</li>
 						<li class="popup__item">
 							<a href="https://instagram.com/konstantin_naam" target="_blank">
 								<p class="popup__title">Instagram</p>
-								<img src="./assets/img/contacts/insta.svg" alt="">
+								<img src="/flsStart4-main2/assets/img/contacts/insta.svg" alt="">
 								<p class="popup__about">konstantin_naam</p>
 							</a>
 						</li>
 						<li class="popup__item">
 							<a href="https://wa.me/79523480141" target="_blank">
 								<p class="popup__title">WhatsApp</p>
-								<img src="./assets/img/contacts/wa.svg" alt="">
+								<img src="/flsStart4-main2/assets/img/contacts/wa.svg" alt="">
 								<p class="popup__about">+79523480141</p>
 							</a>
 						</li>
 						<li class="popup__item">
 							<a href="https://vk.com/naamkv" target="_blank">
 								<p class="popup__title">VKontakte</p>
-								<img src="./assets/img/contacts/vk.svg" alt="">
+								<img src="/flsStart4-main2/assets/img/contacts/vk.svg" alt="">
 								<p class="popup__about">naamkv</p>
 							</a>
 						</li>
