--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		<meta name="keywords" content="стоматолог, пародонтолог, лечение десен, имплантация, зубы, Москва">
 		<link rel="manifest" href="./files/manifest.json">
 		<title>Наам Константин Владимирович | Стоматолог-пародонтолог</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757247865824"></script>
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757250293011"></script>
 		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757247865824">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757247865824">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757250293011">
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757250293011">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -43,7 +43,8 @@
 					<div class="header__logo">
 						<a href="index.html">
 							<picture>
-								<img width="206" alt="Логотип Наам К.В." src="./assets/img/logo.webp">
+								<source srcset="./assets/img/logo.webp" type="image/webp">
+								<img width="206" alt="Логотип Наам К.В." src="./assets/img/logo.png">
 							</picture>
 						</a>
 					</div>
@@ -118,7 +119,8 @@
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-1-450.webp" type="image/webp">
 								<source media="(max-width: 600px)" srcset="./assets/img/main/Photo-naam-1-600.webp" type="image/webp">
 								<source media="(max-width: 1200px)" srcset="./assets/img/main/Photo-naam-1-1200.webp" type="image/webp">
-								<img width="200" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-1.webp">
+								<source srcset="./assets/img/main/Photo-naam-1.webp" type="image/webp">
+								<img width="200" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-1.png">
 							</picture>
 						</div>
 						<div class="item__logo">
@@ -126,7 +128,8 @@
 								<source media="(max-width: 450px)" srcset="./assets/img/main/logo-450.webp" type="image/webp">
 								<source media="(max-width: 600px)" srcset="./assets/img/main/logo-600.webp" type="image/webp">
 								<source media="(max-width: 1200px)" srcset="./assets/img/main/logo-1200.webp" type="image/webp">
-								<img width="300" alt="Логотип Наам К.В." loading="lazy" src="./assets/img/main/logo.webp">
+								<source srcset="./assets/img/main/logo.webp" type="image/webp">
+								<img width="300" alt="Логотип Наам К.В." loading="lazy" src="./assets/img/main/logo.png">
 							</picture>
 						</div>
 						<div class="item__tagline"></div>
@@ -181,7 +184,8 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/dip-450.webp" type="image/webp">
-								<img width="70" alt="Диплом об окончании Пермской государственной медицинской академи" loading="lazy" src="./assets/img/main/dip.webp">
+								<source srcset="./assets/img/main/dip.webp" type="image/webp">
+								<img width="70" alt="Диплом об окончании Пермской государственной медицинской академи" loading="lazy" src="./assets/img/main/dip.png">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -211,7 +215,8 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-2-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-2.webp">
+								<source srcset="./assets/img/main/Photo-naam-2.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-2.jpg">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -237,7 +242,8 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/love_tuymen-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/love_tuymen.webp">
+								<source srcset="./assets/img/main/love_tuymen.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/love_tuymen.jpg">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -257,7 +263,8 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-3-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-3.webp">
+								<source srcset="./assets/img/main/Photo-naam-3.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-3.jpg">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -279,7 +286,8 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-4-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-4.webp">
+								<source srcset="./assets/img/main/Photo-naam-4.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-4.jpg">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -302,7 +310,8 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-5-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-5.webp">
+								<source srcset="./assets/img/main/Photo-naam-5.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-5.jpg">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -323,7 +332,8 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-6-450.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-6.webp">
+								<source srcset="./assets/img/main/Photo-naam-6.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-6.jpg">
 							</picture>
 						</div>
 						<div class="item__text">
