--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		<meta name="keywords" content="стоматолог, пародонтолог, лечение десен, имплантация, зубы, Москва">
 		<link rel="manifest" href="./files/manifest.json">
 		<title>Наам Константин Владимирович | Стоматолог-пародонтолог</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757258971833"></script>
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757259074150"></script>
 		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757258971833">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757258971833">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757259074150">
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757259074150">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -43,8 +43,7 @@
 					<div class="header__logo">
 						<a href="index.html">
 							<picture>
-								<source srcset="./assets/img/logo.webp" type="image/webp">
-								<img width="206" alt="Логотип Наам К.В." src="./assets/img/logo.png">
+								<img width="206" alt="Логотип Наам К.В." src="./assets/img/logo.webp">
 							</picture>
 						</a>
 					</div>
@@ -119,8 +118,7 @@
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-1-450.webp" type="image/webp">
 								<source media="(max-width: 600px)" srcset="./assets/img/main/Photo-naam-1-600.webp" type="image/webp">
 								<source media="(max-width: 1200px)" srcset="./assets/img/main/Photo-naam-1-1200.webp" type="image/webp">
-								<source srcset="./assets/img/main/Photo-naam-1.webp" type="image/webp">
-								<img width="200" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-1.png">
+								<img width="200" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-1.webp">
 							</picture>
 						</div>
 						<div class="item__logo">
@@ -128,8 +126,7 @@
 								<source media="(max-width: 450px)" srcset="./assets/img/main/logo-450.webp" type="image/webp">
 								<source media="(max-width: 600px)" srcset="./assets/img/main/logo-600.webp" type="image/webp">
 								<source media="(max-width: 1200px)" srcset="./assets/img/main/logo-1200.webp" type="image/webp">
-								<source srcset="./assets/img/main/logo.webp" type="image/webp">
-								<img width="300" alt="Логотип Наам К.В." loading="lazy" src="./assets/img/main/logo.png">
+								<img width="300" alt="Логотип Наам К.В." loading="lazy" src="./assets/img/main/logo.webp">
 							</picture>
 						</div>
 						<div class="item__tagline"></div>
@@ -184,8 +181,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/dip-450.webp" type="image/webp">
-								<source srcset="./assets/img/main/dip.webp" type="image/webp">
-								<img width="70" alt="Диплом об окончании Пермской государственной медицинской академи" loading="lazy" src="./assets/img/main/dip.png">
+								<img width="70" alt="Диплом об окончании Пермской государственной медицинской академи" loading="lazy" src="./assets/img/main/dip.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -215,8 +211,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-2-450.webp" type="image/webp">
-								<source srcset="./assets/img/main/Photo-naam-2.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-2.jpg">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-2.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -242,8 +237,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/love_tuymen-450.webp" type="image/webp">
-								<source srcset="./assets/img/main/love_tuymen.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/love_tuymen.jpg">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/love_tuymen.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -263,8 +257,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-3-450.webp" type="image/webp">
-								<source srcset="./assets/img/main/Photo-naam-3.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-3.jpg">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-3.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -286,8 +279,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-4-450.webp" type="image/webp">
-								<source srcset="./assets/img/main/Photo-naam-4.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-4.jpg">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-4.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -310,8 +302,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-5-450.webp" type="image/webp">
-								<source srcset="./assets/img/main/Photo-naam-5.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-5.jpg">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-5.webp">
 							</picture>
 						</div>
 						<div class="item__text">
@@ -332,8 +323,7 @@
 						<div class="item__photo">
 							<picture>
 								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-6-450.webp" type="image/webp">
-								<source srcset="./assets/img/main/Photo-naam-6.webp" type="image/webp">
-								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-6.jpg">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-6.webp">
 							</picture>
 						</div>
 						<div class="item__text">
